--- a/taotao-manager/taotao-manager-interface/pom.xml
+++ b/taotao-manager/taotao-manager-interface/pom.xml
@@ -5,6 +5,7 @@
 		<groupId>com.taotao</groupId>
 		<artifactId>taotao-manager</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../taotao-manager</relativePath>
 	</parent>
 	<artifactId>taotao-manager-interface</artifactId>
 	<dependencies>
