--- a/taotao-manager/taotao-manager-pojo/pom.xml
+++ b/taotao-manager/taotao-manager-pojo/pom.xml
@@ -4,6 +4,8 @@
     <groupId>com.taotao</groupId>
     <artifactId>taotao-manager</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../taotao-manager</relativePath>
   </parent>
   <artifactId>taotao-manager-pojo</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 </project>
