--- a/taotao-manager/taotao-manager/pom.xml
+++ b/taotao-manager/taotao-manager/pom.xml
@@ -11,10 +11,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>taotao-manager-dao</module>
-		<module>taotao-manager-pojo</module>
-		<module>taotao-manager-interface</module>
-		<module>taotao-manager-service</module>
+		<module>../taotao-manager-dao</module>
+		<module>../taotao-manager-pojo</module>
+		<module>../taotao-manager-interface</module>
+		<module>../taotao-manager-service</module>
 	</modules>
 	<dependencies>
 		<!-- 依赖taotao-manager-pojo -->
